Implemented same bahavior for selection command too.

--- a/devoctomy.Passchamp.Client/Pages/SettingsPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/SettingsPage.xaml
@@ -12,7 +12,7 @@
                 Title="Settings"
                 x:Name="Root"
                 Padding="0">
-    <controls:TabView SelectedTabChangedCommand="{Binding TabChanged}">
+    <controls:TabView SelectedTabChangedCommand="{Binding TabChangedCommand}">
         <controls:TabView.TabPages>
             <controls:TabViewPage
                 Title="Cloud"
