Added swipe options to cloud provider, not working with Mouse at current.  Left edit and delete buttons there until resolved as Ui looks much nicer without them.

--- a/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
+++ b/devoctomy.Passchamp.Client/Pages/VaultEditorPage.xaml
@@ -19,24 +19,21 @@
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="48"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <ImageButton
-                Source="command_undo_dark.png"
-                WidthRequest="48"
-                Command="{Binding BackCommand}">
+            <ImageButton Source="command_undo_dark.png"
+                         WidthRequest="48"
+                         Command="{Binding BackCommand}">
             </ImageButton>
-            <Label
-                Grid.Column="1"
-                Text="Vault"
-                Style="{StaticResource LargeLabelStyle}"
-                VerticalOptions="CenterAndExpand"
-                HorizontalTextAlignment="Start"
-                Margin="16,0,0,0">
+            <Label Grid.Column="1"
+                   Text="Vault"
+                   Style="{StaticResource LargeLabelStyle}"
+                   VerticalOptions="CenterAndExpand"
+                   HorizontalTextAlignment="Start"
+                   Margin="16,0,0,0">
             </Label>
-            <ImageButton
-                Grid.Column="2"
-                Source="check_dark.png"
-                WidthRequest="48"
-                Command="{Binding OkCommand}">
+            <ImageButton Grid.Column="2"
+                         Source="check_dark.png"
+                         WidthRequest="48"
+                         Command="{Binding OkCommand}">
             </ImageButton>
         </Grid>
     </Grid>
