--- a/devoctomy.Passchamp.Client/App.xaml
+++ b/devoctomy.Passchamp.Client/App.xaml
@@ -3,11 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:devoctomy.Passchamp.Client"
              x:Class="devoctomy.Passchamp.Client.App"
-             UserAppTheme="Dark">
+             UserAppTheme="Light">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
+                <ResourceDictionary Source="Resources/Styles/SharedColours.xaml" />
+                <ResourceDictionary Source="Resources/Styles/DefaultColours.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
