--- a/devoctomy.Passchamp.Client/App.xaml
+++ b/devoctomy.Passchamp.Client/App.xaml
@@ -9,7 +9,8 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/SharedColours.xaml" />
                 <ResourceDictionary Source="Resources/Styles/DefaultColours.xaml" />
-                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+                <ResourceDictionary Source="Resources/Styles/DefaultTheme.xaml" />
+                <!--<ResourceDictionary Source="Resources/Styles/Styles.xaml" />-->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
