--- a/devoctomy.Passchamp.Client/App.xaml
+++ b/devoctomy.Passchamp.Client/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:devoctomy.Passchamp.Client"
              x:Class="devoctomy.Passchamp.Client.App"
-             UserAppTheme="Light">
+             UserAppTheme="Dark">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
