--- a/devoctomy.Passchamp.Client/Resources/Styles/DefaultTheme.xaml
+++ b/devoctomy.Passchamp.Client/Resources/Styles/DefaultTheme.xaml
@@ -33,8 +33,8 @@
 
     <Style x:Key="MediumLabelStyle" BasedOn="{StaticResource DefaultLabelStyle}" TargetType="Label">
         <Setter Property="FontSize" Value="18" />
-        <Setter Property="FontAttributes" Value="Bold" />
-        <Setter Property="TextColor" Value="{StaticResource Tertiary}"/>
+        <!--<Setter Property="FontAttributes" Value="Bold" />-->
+        <Setter Property="TextColor" Value="{StaticResource Primary}"/>
     </Style>
 
     <Style x:Key="LargeLabelStyle" BasedOn="{StaticResource DefaultLabelStyle}" TargetType="Label">
